# field-notes-whatsapp-logs-processor

./: .dockerignore  .env.example  .gitignore  .railwayignore  BRIDGE_DEPLOY.md  Dockerfile.bridge  Dockerfile.combined  Dockerfile.ingest  README.md  cleanup_reports.py  env.example  face_detection.py  flag_children_without_notes.py  flag_notes_with_unknown_names.py  get_schema.py  ingest_live.py  message_date_filter.py  photo_filter.py  pyproject.toml  regenerate_reports.py  requirements.txt  test_connection.py  whatsapp_database_processor.py
anonymizer/: __init__.py  constants.py  name_anonymizer.py  prompts.py  test_name_anonymizer.py
bridge/: .gitignore  config.example.json  package.json  pnpm-lock.yaml
bridge/src/: chatStore.js  config.js  email.js  (+8 more)
database/: __init__.py  analysis_service.py  child_service.py  connection.py  constants.py  coordinator_note_service.py  facilitator_service.py  image_service.py  message_service.py  report_service.py  test_connection.py
face_detection/: __init__.py  constants.py  face_detector.py  privacy_filter.py
image_processor/: __init__.py  constants.py  image_processor.py  s3_uploader.py
llm_analyzer/: __init__.py  constants.py  llm_analyzer.py  prompts.py
src/: alerts.py  audit_images.py  config.py  main.py  models.py  pipeline.py  reprocess.py  reprocess_images.py  watermark.py
tests/: conftest.py  test_alerts.py  test_bridge_contract.py  test_ingest_idempotent.py  test_ingest_live.py  test_pipeline.py  test_watermark.py
utils/: __init__.py  constants.py  date_filter.py  message_grouper.py  message_processor.py
(+11 files in other folders)
