[project]
name = "vika-ingestion"
version = "0.1.0"
description = "WhatsApp ingestion pipeline for Vika field notes"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.0.0",
    "boto3>=1.34.0",
    "opencv-python-headless>=4.9.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
ingest = "src.main:main"
reprocess = "src.reprocess:main"
reprocess-images = "src.reprocess_images:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
